fix: make redirect sanitization explicit